examples/k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connector-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: connector.opensiem
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensiem-connector-http-input
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dashboards.opensiem
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensiem-opensearch-dashboards
                port:
                  number: 5601
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.opensiem
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensiem-grafana
                port:
                  number: 3000
